--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 	<packaging>jar</packaging>
 	<groupId>com.ariatemplates.attester</groupId>
 	<version>1.0-SNAPSHOT</version>
-	<name>Aria Templates Javascript Test Runner JUnit bridge</name>
+	<name>Attester JUnit bridge</name>
 	<properties>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 	</properties>
